# magnetite

./: .dockerignore  .env.docker  .env.example  .gitattributes  .gitignore  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  DECENTRALIZATION.md  DECENTRALIZATION_PROGRESS.md  DECISIONS.md  Dockerfile.backend  Dockerfile.fly  Dockerfile.frontend  GAPS.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  TASKS.md  docker-compose.override.yml  docker-compose.yml  eslint.config.js  fly.toml  index.html  nginx.conf  package-lock.json  package.json  playwright.config.js  roadmap.md  vite.config.js  vitest.a11y.config.js  vitest.config.js
backend/: .env.example  .gitignore  Cargo.toml
backend/magnetite-sdk/: Cargo.toml  README.md
backend/magnetite-sdk/src/: authority.rs  game.rs  graphics.rs  input.rs  lib.rs  networking.rs  protocol.rs  scaling.rs  state.rs
backend/migrations/: 20250119000000_baseline.sql  20250119_abc_initial_schema.sql  20250120_add_admin_fields.sql  20250120_sessions.sql  20250121_achievements.sql  20250121_social_features.sql  20250122_anti_cheat.sql  20250122_friendships.sql  20250123_user_profile.sql  20250123_wishlists.sql  20250125_add_indexes.sql  20250126_add_search_indexes.sql  20250126_categories.sql  20250126_game_sessions.sql  20250126_notifications.sql  20250126_platform_settings.sql  20250127_reviews.sql  20250127_verification_tokens.sql  20250128_wallet_service.sql  20250130_subscription_model.sql  20250130_tournaments.sql  20250519_github_app_integration.sql  20260530_communities.sql  20260530_game_distribution.sql  20260531_economy.sql  20260601_api_keys_2fa.sql  20260601_auth_security.sql  20260601_currency_usd.sql  20260601_gds_scaffold.sql  20260601_streaming.sql  20260601_wise_recipients.sql  20260602_build_runner_tokens.sql  20260603_notification_preferences.sql  20260603_runtime_instances.sql  20260604_review_helpful_reports_contact.sql  20260605_ax2c_social_search_leaderboard.sql  20260605_subscription_lifecycle.sql  20260701_review_reports_moderation.sql  20260702_content_rating_refunds.sql  20260703_auto_flag_chat_flags.sql  (+8 more)
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src/api/: achievements.rs  admin.rs  auth.rs  categories.rs  channels.rs  communities.rs  contact.rs  developer.rs  discovery.rs  distribution.rs  games.rs  github.rs  health.rs  leaderboard.rs  marketplace.rs  matchmaking.rs  messages.rs  metrics.rs  middleware.rs  mod.rs  notifications.rs  oauth.rs  platform.rs  points.rs  profile.rs  provisioning.rs  replays.rs  response.rs  reviews.rs  search.rs  sessions.rs  social.rs  streaming.rs  subscriptions.rs  templates.rs  tournaments.rs  versioning.rs  wallet.rs  webhooks.rs  wishlist.rs
backend/src/comms/: api.rs  bridge.rs  gate.rs  mod.rs  providers.rs
backend/src/db/: pool.rs
backend/src/jobs/: backup.rs  mod.rs  notification_cleanup.rs  session_cleanup.rs  verification_cleanup.rs
backend/src/middleware/: cors.rs  logging.rs  mod.rs  rate_limit.rs  request_metrics.rs
backend/src/services/: achievements.rs  analytics.rs  anticheat.rs  auth.rs  cache.rs  communities.rs  distribution.rs  email.rs  friends.rs  games.rs  health.rs  invites.rs  leaderboard.rs  marketplace.rs  matchmaking.rs  mod.rs  payment.rs  payout.rs  points.rs  presence.rs  provisioning.rs  session.rs  streaming.rs  verification.rs  wallet.rs  wise.rs
backend/src/superadmin/: analytics.rs  auth.rs  billing.rs  geo.rs  html.rs  mod.rs  ops.rs  pages.rs
backend/src/ws/: comms.rs  game.rs  gauges.rs  mod.rs  voice.rs
backend/templates/emails/: achievement_unlocked.html  achievement_unlocked.txt  ban_notification.html  ban_notification.txt  base.html  game_invite.html  game_invite.txt  password_reset.html  password_reset.txt  payout_complete.html  payout_complete.txt  payout_notification.html  payout_notification.txt  subscription_cancelled.html  subscription_cancelled.txt  subscription_confirmation.html  subscription_confirmation.txt  verify_email.html  verify_email.txt  welcome.html  welcome.txt
backend/tests/: admin_analytics_tests.rs  api_tests.rs  auth_tests.rs  ax2_tests.rs  depth1_tests.rs  discovery_http_tests.rs  gds_tests.rs  mx1_tests.rs  rt5_tests.rs  service_tests.rs  store_hardening_tests.rs  wallet_tests.rs
backend/tests/common/: mod.rs
backend/tools/: backup.sh  migrate.sh
config/: mediamtx.yml
game-client-bevy/: Cargo.toml
game-client-bevy/src/: app.rs  lib.rs  main.rs  net.rs  prediction.rs
game-template/: Cargo.toml  README.md  build.sh  index.html
game-template-authoritative/: Cargo.toml
game-template-authoritative/src/: wasm_abi.rs
game-template-motorsport/: Cargo.toml  README.md
game-template-motorsport/src/: lib.rs  main.rs
game-template/src/: lib.rs
game-templates/arcade/: Cargo.toml  README.md  index.html
game-templates/arcade/src/: lib.rs
game-templates/fps/: Cargo.toml  README.md
magnetite-anticheat/: Cargo.toml
magnetite-anticheat/src/: lib.rs  replay_verifier.rs  trust.rs  validators.rs
magnetite-cli/: Cargo.toml
magnetite-cli/src/: main.rs
magnetite-e2e/: Cargo.toml
magnetite-e2e/src/: harness.rs  lib.rs
magnetite-e2e/tests/: anticheat.rs  convergence.rs  decentralized_loop.rs  fullstack_ws.rs  scale_bench.rs  sharded.rs  wasm_end_to_end.rs
magnetite-runtime/: Cargo.toml  Dockerfile
magnetite-runtime/examples/: redirect_fixture.rs  single_room.rs
magnetite-runtime/src/: attested.rs  capacity.rs  checkpoint.rs  cluster.rs  connection.rs  fleet.rs  follow.rs  lib.rs  node.rs  rebalance.rs  server.rs  shard.rs  tick.rs  tracker.rs
magnetite-runtime/tests/: attested_wire.rs  checkpoint_driver.rs  cluster_rebalance.rs  fleet_durability.rs  redirect_fixture.rs  session_follow.rs
magnetite-sandbox/: Cargo.toml
magnetite-sandbox/src/: abi.rs  executor.rs  lib.rs  limits.rs
magnetite-seams/: Cargo.toml
magnetite-seams/src/: blobstore.rs  comms.rs  discovery.rs  error.rs  identity.rs  input.rs  lib.rs  naming.rs  payment.rs
magnetite-seams/tests/: seam_pluggability.rs
magnetite-solana-rail/: Cargo.toml
magnetite-solana-rail/src/: lib.rs  tests.rs
(+662 files in other folders)
