[package]
name = "magnetite-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
rand_chacha = "0.3"
base64 = "0.13"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2"
handlebars = "5"
lettre = { version = "0.11", features = ["tokio1-native-tls", "tokio1", "smtp-transport", "builder"] }
async-trait = "0.1"
sys-info = "0.9"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
tokio-stream = "0.1"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
# Offline, in-house IP geolocation for the super-admin analytics panel. Reads a
# local MaxMind GeoLite2 .mmdb file when GEOIP_DB_PATH is set; makes no network
# calls. Geo fields degrade gracefully to NULL when no database is configured.
maxminddb = "0.24"

# Decentralization seams (DECENTRALIZATION.md §3): content-addressed BlobStore
# hashing + Discovery `SessionAd` shape. Used to express the demotion of the
# central `runtime_instances` poll toward self-advertising nodes, and to resolve
# games by content hash. Pulls in no external service — offline defaults only.
magnetite-seams = { path = "../magnetite-seams" }

# The real SPL-USDC-on-Solana `PaymentRail` — a SEPARATE crate
# (`../magnetite-solana-rail`, itself an unconditional path dep on the sibling
# `patala` repo's `patala-core`/`patala-solana`), not a `magnetite-seams`
# feature. `solana_rail_from_env` below builds
# `magnetite_solana_rail::SolanaConfig`/`SolanaPaymentRail` and reaches
# `patala_solana` (RPC client, mint constants) through this crate's
# `pub use patala_solana` re-export, rather than depending on `patala-solana`
# directly — one seam to the sibling repo, not two.
#
# Optional, `solana`-feature-gated — same "off by default" posture as before.
# NOTE: this is still a path dependency to a crate that itself unconditionally
# needs `../../patala`, so — exactly as before this refactor — resolving even
# this OPTIONAL, INACTIVE edge can require `../../patala` to exist depending on
# Cargo's resolve/lock cache state (see `magnetite-seams/Cargo.toml`'s longer
# note on why that dependency was moved out of that crate entirely). This
# backend binary was not restructured the same way because doing so would mean
# dropping `PAYMENT_RAIL=solana` support from this binary altogether — a
# regression the task asked NOT to make. This residual fragility is
# pre-existing (this dependency was already an optional path dep before this
# change) and is called out explicitly in the fix's final report.
magnetite-solana-rail = { path = "../magnetite-solana-rail", optional = true }

[features]
default = []
# Compile in the real SPL-USDC-on-Solana payment rail so `PAYMENT_RAIL=solana`
# can select it. OFF by default: the offline mock rail stays the default and the
# default build pulls in no chain dependencies and opens no sockets.
solana = ["dep:magnetite-solana-rail"]

[dev-dependencies]
tokio-test = "0.4"
rust_decimal_macros = "1"
temp-env = { version = "0.3", features = ["async_closure"] }
magnetite-sdk = { path = "magnetite-sdk" }
