[package]
name = "game-template-authoritative"
version = "0.1.0"
edition = "2021"
description = "Reference authoritative arena shooter implementing AuthoritativeGame — server-authoritative, deterministic, sandbox-ready."
license = "MIT"
keywords = ["game", "authoritative", "wasm", "magnetite", "arena"]
categories = ["game-engines"]

# Produce both a cdylib (for wasm32-wasip1 sandbox) and rlib (tests/native).
[lib]
crate-type = ["cdylib", "rlib"]

# ── Feature flags ──────────────────────────────────────────────────────────────
#
# `wasm`  – Export the mag_* ABI required by the Magnetite sandbox.
#           Build: cargo build --release --target wasm32-wasip1 --features wasm
#
# (default / no features) – Pure game logic + tests; no WASM ABI emitted.
#           Build: cargo check  (or cargo test)
[features]
default = []
wasm = []

# ── Dependencies ──────────────────────────────────────────────────────────────
[dependencies]
magnetite-sdk = { path = "../backend/magnetite-sdk" }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# ── Build profiles ─────────────────────────────────────────────────────────────
[profile.release]
lto           = true
opt-level     = "z"
codegen-units = 1
panic         = "abort"

[profile.dev]
opt-level = 0
