[package]
name = "magnetite-anticheat"
version = "0.1.0"
edition = "2021"
description = "First-class composable anti-cheat for the Magnetite platform — validator chain, trust scoring, replay verification."
license = "MIT"
keywords = ["game", "anticheat", "multiplayer", "magnetite"]
categories = ["game-engines"]

[dependencies]
magnetite-sdk = { path = "../backend/magnetite-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
