[package]
name = "magnetite-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for the Magnetite game platform — scaffold, build, dev, and deploy authoritative Rust games."
license = "MIT"
keywords = ["game", "cli", "wasm", "magnetite", "multiplayer"]
categories = ["command-line-utilities", "game-engines"]

[[bin]]
name = "magnetite"
path = "src/main.rs"

[dependencies]
clap   = { version = "4", features = ["derive"] }
anyhow = "1"

[profile.release]
lto           = true
opt-level     = "z"
codegen-units = 1
