[package]
name = "magnetite-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for the Magnetite game platform — scaffold, build, dev, and deploy authoritative Rust games."
license = "MIT"
keywords = ["game", "cli", "wasm", "magnetite", "multiplayer"]
categories = ["command-line-utilities", "game-engines"]

[[bin]]
name = "magnetite"
path = "src/main.rs"

[dependencies]
clap             = { version = "4", features = ["derive"] }
anyhow           = "1"
magnetite-runtime = { path = "../magnetite-runtime" }
# Seam traits: the node signs its tracker announcements with its own key.
magnetite-seams = { path = "../magnetite-seams" }
hex = "0.4"
magnetite-sandbox = { path = "../magnetite-sandbox" }
reqwest          = { version = "0.12", features = ["blocking", "json", "multipart"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
tokio            = { version = "1", features = ["rt-multi-thread", "net", "macros"] }

[profile.release]
lto           = true
opt-level     = "z"
codegen-units = 1
