[package]
name = "magnetite-e2e"
version = "0.1.0"
edition = "2021"
description = "End-to-end integration tests and scale harness for the Magnetite MOAT stack."
license = "MIT"

[dependencies]
magnetite-runtime = { path = "../magnetite-runtime" }
magnetite-anticheat = { path = "../magnetite-anticheat" }
magnetite-sandbox = { path = "../magnetite-sandbox" }
magnetite-sdk = { path = "../backend/magnetite-sdk" }
# The six seams — the offline decentralized-loop proof programs against these
# traits only, never a provider type.
magnetite-seams = { path = "../magnetite-seams" }
game-template-authoritative = { path = "../game-templates/authoritative" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24" }
futures-util = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
magnetite-runtime = { path = "../magnetite-runtime" }
magnetite-anticheat = { path = "../magnetite-anticheat" }
magnetite-sandbox = { path = "../magnetite-sandbox" }
magnetite-sdk = { path = "../backend/magnetite-sdk" }
magnetite-seams = { path = "../magnetite-seams" }
game-template-authoritative = { path = "../game-templates/authoritative" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24" }
futures-util = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
