[package]
name = "magnetite-runtime"
version = "0.1.0"
edition = "2021"
description = "Authoritative game-server host for Magnetite — tick loop, WS connection manager, interest-filtered delta broadcast, topology implementations."
license = "MIT"
keywords = ["game", "multiplayer", "authoritative", "server", "magnetite"]
categories = ["game-engines", "network-programming"]

[dependencies]
# `scaling` pulls in the Shardable + ShardScheduler + capacity primitives.
magnetite-sdk = { path = "../backend/magnetite-sdk", features = ["scaling"] }
magnetite-sandbox = { path = "../magnetite-sandbox" }
magnetite-anticheat = { path = "../magnetite-anticheat" }
# The platform seams: Discovery (self-advertise), BlobStore (content-addressed
# games), Capacity. Runtime programs against these traits only.
magnetite-seams = { path = "../magnetite-seams" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = [] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
# Used only by unit tests that define a custom BlobStore (async-trait) provider.
async-trait = "0.1"
