[package]
name = "magnetite-runtime"
version = "0.1.0"
edition = "2021"
description = "Authoritative game-server host for Magnetite — tick loop, WS connection manager, interest-filtered delta broadcast, topology implementations."
license = "MIT"
keywords = ["game", "multiplayer", "authoritative", "server", "magnetite"]
categories = ["game-engines", "network-programming"]

[dependencies]
# `scaling` pulls in the Shardable + ShardScheduler + capacity primitives.
magnetite-sdk = { path = "../backend/magnetite-sdk", features = ["scaling"] }
magnetite-sandbox = { path = "../magnetite-sandbox" }
magnetite-anticheat = { path = "../magnetite-anticheat" }
# The platform seams: Discovery (self-advertise), BlobStore (content-addressed
# games), Capacity. Runtime programs against these traits only.
magnetite-seams = { path = "../magnetite-seams" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = [] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# `tracker` module only: the HTTP transport behind the Discovery seam's
# TrackerDiscovery. Opt-in at runtime (TRACKER_URL); the zero-config default is
# LanDiscovery, so nothing here is required for a node to run offline.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
# Already in the tree via magnetite-seams; named here because `checkpoint`
# hex-encodes state bytes inside the checkpoint envelope. No new external code.
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
