[package]
name = "magnetite-seams"
version = "0.1.0"
edition = "2021"
description = "The six pluggable seams for the decentralized Magnetite games platform — Identity/Auth, Naming, BlobStore, Discovery, CommsProvider, PaymentRail — as traits plus zero-external-service default implementations."
license = "MIT"
keywords = ["decentralized", "p2p", "games", "seams", "magnetite"]
categories = ["game-development", "network-programming", "cryptography"]

# NOTE: This repo is a set of standalone crates linked by path dependencies
# (there is no root `[workspace]`). `magnetite-seams` follows the same pattern:
# a standalone crate, edition 2021, matching its siblings (magnetite-sdk,
# magnetite-sandbox, ...). It deliberately depends on NO other magnetite crate
# and NO provider-specific / external-service SDK — only small, well-known
# building blocks. All six seams ship a default that works fully offline.

[features]
default = []
# Optional word-based naming provider (`keyname::KeyNameNaming`). Adds NO
# dependencies — it only enables an extra module — and exists so the Naming seam
# has a second real implementation, proving the seam is not hardwired to its
# default.
keyname = []
# Real SPL-USDC-on-Solana `PaymentRail` (`solana::SolanaPaymentRail`). OFF by
# default: the offline `MockPaymentRail` stays the default rail, and with this
# feature off the crate builds and tests with NO network and NO new deps.
solana = [
    "dep:bs58",
    "dep:sha2",
    "dep:curve25519-dalek",
    "dep:serde_json",
    "dep:tokio",
    "dep:reqwest",
]

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
blake3 = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
hex = "0.4"
rand = "0.8"

# --- `solana` feature only (all optional, none in the default build) ---------
bs58 = { version = "0.5", optional = true }
sha2 = { version = "0.10", optional = true }
curve25519-dalek = { version = "4", optional = true }
serde_json = { version = "1", optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
serde_json = "1"
