[package]
name = "magnetite-seams"
version = "0.1.0"
edition = "2021"
description = "The six pluggable seams for the decentralized Magnetite games platform — Identity/Auth, Naming, BlobStore, Discovery, CommsProvider, PaymentRail — as traits plus zero-external-service default implementations."
license = "MIT OR Apache-2.0"
keywords = ["decentralized", "p2p", "games", "seams", "magnetite"]
categories = ["game-development", "network-programming", "cryptography"]

# NOTE: This repo is a set of standalone crates linked by path dependencies
# (there is no root `[workspace]`). `magnetite-seams` follows the same pattern:
# a standalone crate, edition 2021, matching its siblings (magnetite-sdk,
# magnetite-sandbox, ...). It deliberately depends on NO other magnetite crate
# and NO provider-specific / external-service SDK — only small, well-known
# building blocks. All six seams ship a default that works fully offline.
#
# This crate has ZERO dependency (not even an optional/feature-gated one) on
# the sibling `patala` repo. It used to carry `patala-core`/`patala-solana` as
# `optional = true` path dependencies behind a `solana` feature, which LOOKS
# safe but is not: Cargo must resolve every optional path/git dependency to
# build a complete `Cargo.lock`, regardless of whether the gating feature is
# active (https://github.com/rust-lang/cargo/issues/10801 and friends) —
# verified empirically against this exact crate: with `../../patala` absent
# and the `solana` feature OFF, `cargo build` sometimes succeeded and
# `cargo test` run immediately after, with nothing else changed, FAILED
# needing `../../patala/patala-core/Cargo.toml`, purely depending on Cargo's
# internal resolve/lock cache state. That is not a working decoupling, it is a
# coin flip that WILL come up tails on a fresh checkout / CI runner with no
# warm cache. The real SPL-USDC-on-Solana `PaymentRail` now lives in its own
# crate, `../magnetite-solana-rail` (see that crate's `Cargo.toml` for the
# full explanation) — nothing here references it, so `cargo build`/`cargo
# test` in this crate is provably `../../patala`-free on every invocation.

[features]
default = []
# Optional word-based naming provider (`keyname::KeyNameNaming`). Adds NO
# dependencies (path, git, or otherwise) — it only enables an extra module —
# and exists so the Naming seam has a second real implementation, proving the
# seam is not hardwired to its default.
keyname = []

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
blake3 = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
hex = "0.4"
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
serde_json = "1"
