[package]
name = "magnetite-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for building multiplayer games on the Magnetite platform — from game-jam to AAA scale."
license = "MIT"
keywords = ["game", "multiplayer", "netcode", "wasm", "magnetite"]
categories = ["game-engines", "network-programming"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Optional: the platform seam crate. Only pulled in under the `scaling` feature
# so default game builds (compiled to wasm32-wasip1) stay lean and dependency-
# free. The runtime enables `scaling` to get the ShardScheduler + capacity types.
magnetite-seams = { path = "../../magnetite-seams", optional = true }

[features]
default = []
# Capacity-elastic scaling: Shardable + ShardScheduler + emergent player caps.
# Enabling this pulls in `magnetite-seams` for its `discovery::Capacity` type.
scaling = ["magnetite-seams"]
