[package]
name = "magnetite-game-template"
version = "0.1.0"
edition = "2021"
description = "Starter game template for the Magnetite platform — runs natively and in-browser via WASM."
license = "MIT"

# Produce both a cdylib (for WASM/wasm-bindgen) and an rlib (for tests / native linking).
[lib]
crate-type = ["cdylib", "rlib"]

# ── Feature flags ──────────────────────────────────────────────────────────────
#
# `native`  – pulls in the full Bevy render/window/input stack for desktop.
#             Usage:  cargo run --features native
#
# `wasm`    – WASM-only build: Bevy ECS + winit + WebGL2 backend + browser
#             panic hook.
#             Usage:  cargo build --target wasm32-unknown-unknown --no-default-features --features wasm
#
# *(neither)* – SDK + wasm-bindgen glue only, no Bevy crates compiled.
#               Used by `cargo check` / `cargo test` in CI for a fast pass.
[features]
native = [
    "dep:bevy",
    "bevy/default",           # window + renderer + audio + all standard plugins
]
wasm = [
    "dep:bevy",
    "bevy/bevy_winit",        # Bevy→winit bridge (required for run())
    "bevy/webgl2",            # WebGL2 rendering backend
    "dep:console_error_panic_hook",
    "dep:web-sys",
]

# ── Common dependencies ────────────────────────────────────────────────────────
[dependencies]
# magnetite-sdk provides GameLogic, Input, GameState, PlayerId, …
magnetite-sdk = { path = "../../backend/magnetite-sdk" }

# Bevy — optional; only compiled when `native` or `wasm` feature is active.
bevy = { version = "0.14", default-features = false, optional = true }

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
wasm-bindgen = "0.2"
# getrandom js feature is required on wasm32 for anything that needs entropy.
getrandom   = { version = "0.2", features = ["js"] }

# ── WASM-only dependencies ─────────────────────────────────────────────────────
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "WebGlRenderingContext",
] }

# ── Dev dependencies (tests run on the host) ──────────────────────────────────
[dev-dependencies]
# nothing extra needed; serde_json is already a normal dep

# ── Build profiles ─────────────────────────────────────────────────────────────
[profile.release]
# Small + fast WASM binaries: LTO + size optimisation.
lto           = true
opt-level     = "z"
codegen-units = 1
panic         = "abort"   # required for wasm32; also shrinks native

[profile.dev]
opt-level = 0
