[package]
name = "magnetite-fps-starter"
version = "0.1.0"
edition = "2021"
description = "FPS starter template for the Magnetite platform — advanced 3D, Bevy + rapier3d, controller-ready."
license = "MIT"

# Produce both a cdylib (for WASM/wasm-bindgen) and an rlib (for tests / native linking).
[lib]
crate-type = ["cdylib", "rlib"]

# ── Feature flags ──────────────────────────────────────────────────────────────
#
# `native`  – full Bevy render stack + rapier3d for desktop; gilrs for gamepad.
#             Usage:  cargo run --features native
#
# `wasm`    – Bevy ECS + winit + WebGL2 backend + rapier3d for browser;
#             uses the Gamepad API (web-sys) for controller input.
#             Usage:  cargo build --target wasm32-unknown-unknown --no-default-features --features wasm
#
# *(neither)* – SDK-only: no Bevy, no rapier, no render stack.
#               Used by `cargo check` / `cargo test` in CI for a fast pass.
[features]
default = []

native = [
    "dep:bevy",
    "bevy/default",
    "dep:bevy_rapier3d",
    "bevy_rapier3d/debug-render-3d",
    "dep:gilrs",
]

wasm = [
    "dep:bevy",
    "bevy/bevy_winit",
    "bevy/webgl2",
    "dep:bevy_rapier3d",
    "dep:console_error_panic_hook",
    "dep:web-sys",
]

# ── Common dependencies ────────────────────────────────────────────────────────
[dependencies]
# The Magnetite platform SDK — GameLogic, Input, InputMap, GameState, comms, …
magnetite-sdk = { path = "../../backend/magnetite-sdk" }

# Bevy — optional; compiled only when `native` or `wasm` feature is active.
bevy = { version = "0.14", default-features = false, optional = true }

# rapier3d — Bevy physics plugin for 3-D rigid-body + character collisions.
# optional: only compiled with the render features.
bevy_rapier3d = { version = "0.27", default-features = false, optional = true }

# gilrs — game-controller / gamepad support for native builds.
gilrs = { version = "0.10", optional = true }

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
wasm-bindgen = "0.2"
getrandom   = { version = "0.2", features = ["js"] }

# ── WASM-only dependencies ─────────────────────────────────────────────────────
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "Gamepad",
    "GamepadButton",
    "GamepadEvent",
    "Navigator",
] }

# ── Build profiles ─────────────────────────────────────────────────────────────
[profile.release]
lto           = true
opt-level     = "z"
codegen-units = 1
panic         = "abort"

[profile.dev]
opt-level = 0
